	  +70 to +80 for cache hits, and +96% for version.bind.
	  zone nsec3 example, 100 NXDOMAIN queries, NSD 35182.8 Ub 36048.4
	  www.nlnetlabs.nl from cache: BIND 8987.99 Ub 31218.3
	  www with DO bit set : BIND 8269.31 Ub 28735.6 qps.
	  So, unbound can be about equal qps to NSD in cache hits.
	  And about 3.4x faster than BIND in cache performance.

21 February 2008: Wouter
	- speedup of root-delegation message encoding by 15%.
	- minor speedup of compress tree_lookup, maybe 1%.
	- speedup of dname_lab_cmp and memlowercmp - the top functions in 
	  profiler output, maybe a couple percent when it matters.

20 February 2008: Wouter
	- setup speec_cache for need-ldns-testns in dotests.
	- check number of queued replies on incoming queries to avoid overload
	  on that account.
	- fptr whitelist checks are not disabled in optimize mode.
	- do-daemonize config file option.
	- minievent time share initializes time at start.
	- updated testdata for nsec3 new algorithm numbers (6, 7).
	- small performance test of packet encoding (root delegation).

19 February 2008: Wouter
	- applied patch to unbound-host man page from Jan-Piet Mens.
	- fix donotquery-localhost: yes default (it erroneously was switched
	  to default 'no').
	- time is only gotten once and the value is shared across unbound.
	- unittest cleans up crypto, so that it has no memory leaks.
	- mini_event shares the time value with unbound this results in 
	  +3% speed for cache responses and +9% for recursions.
	- ldns tarball update with new NSEC3 sign code numbers.
	- perform several reads per UDP operation. This improves performance
	  in DoS conditions, and costs very little in normal conditions.
	  improves cache response +50%, and recursions +10%.
	- modified asynclook test. because the callback from async is not
	  in any sort of lock (and thus can use all library functions freely),
	  this causes a tiny race condition window when the last lock is 